tests/baselines/reference/ExportFunctionWithAccessibleTypesInParameterAndReturnTypeAnnotation.errors.txt
ExportFunctionWithAccessibleTypesInParameterAndReturnTypeAnnotation.ts(4,9): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
ExportFunctionWithAccessibleTypesInParameterAndReturnTypeAnnotation.ts(5,9): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.


==== ExportFunctionWithAccessibleTypesInParameterAndReturnTypeAnnotation.ts (2 errors) ====
    namespace A {
    
        export class Point {
            x: number;
            ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
            y: number;
            ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
        }
    
        export class Line {
            constructor(public start: Point, public end: Point) { }
        }
    
        export function fromOrigin(p: Point): Line {
            return new Line({ x: 0, y: 0 }, p);
        }
    }